<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="string_toast">This button will launch my %1$s app!</string>

    <string name="popular_movies">Popular Movies</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone_my_own_app">Capstone My Own App</string>
    <string name="make_your_app_material">Make your app material</string>

</resources>
