<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.derohimat.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/my_nanodegree_apps"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btnPopularMovies"
        style="@style/ButtonHome"
        android:onClick="onButtonClick"
        android:text="@string/popular_movies"/>

    <Button
        android:id="@+id/btnStockHawk"
        style="@style/ButtonHome"
        android:onClick="onButtonClick"
        android:text="@string/stock_hawk"/>

    <Button
        android:id="@+id/btnBuildItBigger"
        style="@style/ButtonHome"
        android:onClick="onButtonClick"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/btnMakeAppMaterial"
        style="@style/ButtonHome"
        android:onClick="onButtonClick"
        android:text="@string/make_your_app_material"/>

    <Button
        android:id="@+id/btnGoUbiquitous"
        style="@style/ButtonHome"
        android:onClick="onButtonClick"
        android:text="@string/go_ubiquitous"/>

    <Button
        android:id="@+id/btnMyOwnApp"
        style="@style/ButtonHome"
        android:background="@color/colorAccent"
        android:onClick="onButtonClick"
        android:text="@string/capstone_my_own_app"/>

</LinearLayout>
